[package]
name = "session-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.1", features = ["debug"] }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
session-game-io.path = "io"
wordle-game-io.path = "../wordle/io"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.1" }
session-game-io.path = "io"
wordle-game-io.path = "../wordle/io"

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.1", features = ["debug"]  }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.1" }
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.1" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
session-game-io.path = "io"
wordle-game-io.path = "../wordle/io"
