[package]
name = "wordle-game-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.1" }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.1" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
enum-iterator = "2.1.0"
